# DB-GPT

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: alembic.ini  backend.err  pyproject.toml  requirements.txt  seed_dummy_data.py  uvicorn.err
backend/app/: config.py  database.py  main.py
backend/app/agents/: analysis_agent.py  planner_agent.py  python_agent.py  skill_agent.py  sql_agent.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  chat.py  dashboards.py  datasources.py  favorites.py  queries.py  reports.py  search.py  settings.py  skills.py  uploads.py
backend/app/core/: events.py  exceptions.py  security.py
backend/app/integrations/: db_connectors.py  file_parsers.py  llm_providers.py
backend/app/models/: __init__.py  dashboard.py  datasource.py  favorite.py  query.py  report.py  skill.py  user.py
backend/app/schemas/: auth.py  chat.py  dashboard.py  datasource.py  query.py  report.py  skill.py
backend/app/services/: auth_service.py  chat_service.py  dashboard_service.py  datasource_service.py  llm_service.py  query_service.py  report_service.py  skill_service.py  upload_service.py
backend/app/utils/: helpers.py  sandbox.py  sql_safety.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-auth.ts  use-chat.ts  use-dashboards.ts  use-favorites.ts  (+7 more)
scripts/: seed_data.py  setup.ps1
(+59 files in other folders)
